Most of the work done. Need to add literature review and markdown comments

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,8 +1,67 @@
-@article{distress,
-  title = {Recent developments in typesetting software},
-  author = {Smith, John and Doe, Jane},
-  year = {2023},
-  journal = {Journal of Modern Typography},
-  volume = {1},
-  pages = {1-10}
+@article{cuesta2024influence,
+  author  = {Mochales Cuesta, Ignacio and Jim\'{e}nez-S\'{a}iz, Sergio L. and Kelly, Adam L. and Bustamante-S\'{a}nchez, \'{A}lvaro},
+  title   = {The influence of home-court advantage in elite basketball: {A} systematic review},
+  journal = {Journal of Functional Morphology and Kinesiology},
+  volume  = {9},
+  number  = {4},
+  pages   = {192},
+  year    = {2024},
+  doi     = {10.3390/jfmk9040192}
+}
+
+@article{vanbommel2021home,
+  author  = {van Bommel, Matthew and Bornn, Luke and Chow-White, Peter and Gao, Chuancong},
+  title   = {Home sweet home: {Quantifying} home court advantages for {NCAA} basketball statistics},
+  journal = {Journal of Sports Analytics},
+  volume  = {7},
+  pages   = {25--36},
+  year    = {2021},
+  doi     = {10.3233/JSA-200450}
+}
+
+@unpublished{fettig_analysis,
+  author = {Fettig, Simon and Guldan, Megan and Law, Michael and Ritov, Ya'acov},
+  title  = {An analysis of {NBA} home court advantage},
+  note   = {Department of Statistics, University of Michigan},
+  year   = {2024}
+}
+
+@manual{NCAA_MBB_Rules_2023,
+  title        = {2023--24 NCAA Men's Basketball Rules},
+  author       = {{National Collegiate Athletic Association}},
+  organization = {National Collegiate Athletic Association},
+  address      = {Indianapolis, IN},
+  year         = {2023},
+  month        = aug,
+  note         = {Manuscript prepared by Jeff O'Malley, Secretary--Rules Editor; edited by Andy Supergan},
+  url          = {https://www.ncaa.org/playingrules},
+  issn         = {1042-3877}
+}
+
+@online{Gharib2024_free_throw_distractions,
+  author       = {Anthony Gharib},
+  title        = {Top men's college basketball free throw distractions of the season},
+  year         = {2024},
+  month        = mar,
+  day          = {18},
+  organization = {ESPN},
+  url          = {https://www.espn.com/mens-college-basketball/story/_/id/39748477/college-basketball-free-throw-distractions-2023-24},
+  note         = {Accessed: 2026-02-20}
+}
+
+@book{Ness2025_causal_ai,
+  author    = {Ness, Robert Osazuwa},
+  title     = {Causal AI},
+  year      = {2025},
+  address   = {Shelter Island, NY},
+  publisher = {Manning Publications},
+  isbn      = {9781633439917}
+}
+
+@article{sharma2020dowhy,
+  title={DoWhy: An End-to-End Library for Causal Inference},
+  author={Sharma, Amit and Kiciman, Emre},
+  journal={arXiv preprint arXiv:2011.04216},
+  year={2020},
+  url={https://arxiv.org/abs/2011.04216}
 }
